<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_width="match_parent">

    <TableLayout
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.52"
        android:layout_marginTop="24dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/FourthRow">
            <Button
                android:text="@string/Clear"
                android:layout_height="match_parent"
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
            <Button
                android:text="@string/Brackets"
                android:layout_height="match_parent"
                android:id="@+id/btnParant"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
            <Button
                android:text="@string/Percentage"
                android:layout_height="match_parent"
                android:id="@+id/btnPercent"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
            <Button
                android:text="@string/Divide"
                android:layout_height="match_parent"
                android:id="@+id/btnDivide"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/ThirdRow">
            <Button
                android:text="@string/Seven"
                android:layout_height="match_parent"
                android:id="@+id/btnSeven"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Eight"
                android:layout_height="match_parent"
                android:id="@+id/btnEight"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Nine"
                android:layout_height="match_parent"
                android:id="@+id/btnNine"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Times"
                android:layout_height="match_parent"
                android:id="@+id/btnMulti"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/SecondRow">
            <Button
                android:text="@string/Four"
                android:layout_height="match_parent"
                android:id="@+id/btnFour"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Five"
                android:layout_height="match_parent"
                android:id="@+id/btnFive"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Six"
                android:layout_height="match_parent"
                android:id="@+id/btnSix"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Minus"
                android:layout_height="match_parent"
                android:id="@+id/btnMinus"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/FirstRow">
            <Button
                android:text="@string/One"
                android:layout_height="match_parent"
                android:id="@+id/btnOne"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Two"
                android:layout_height="match_parent"
                android:id="@+id/btnTwo"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Three"
                android:layout_height="match_parent"
                android:id="@+id/btnThree"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Plus"
                android:layout_height="match_parent"
                android:id="@+id/btnPlus"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/BottomRow">
            <Button
                android:text="@string/Opposite"
                android:layout_height="match_parent"
                android:id="@+id/btnOpposite"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Zero"
                android:layout_height="match_parent"
                android:id="@+id/btnZero"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Comma"
                android:layout_height="match_parent"
                android:id="@+id/btnComma"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorAccent"/>
            <Button
                android:text="@string/Equal"
                android:layout_height="match_parent"
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="96dp"
                android:background="@color/colorPrimary"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtField"
        android:layout_width="358dp"
        android:layout_height="92dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="23" />

</android.support.constraint.ConstraintLayout>